album/views/_css/album.css
.ui-album-icons {
  background-image: url(../_img/icons_album.png)!important;
}
.ui-album-icon-create {
  background-position: -5px -6px;
  height: 29px;
  width: 37px;	
}

.ui-album-icon-add {
  background-position: -42px -6px;
  height: 29px;
  width: 37px;	
}

.ui-album-icon-person {
  background-position: -79px -6px;
  height: 29px;
  width: 37px;	
}

.ui-album-icon-manage {
  background-position: -5px -87px;
  height: 29px;
  width: 37px;	
}

.ui-album-icon-slideshow {
  background-position: -42px -87px;
  height: 29px;
  width: 37px;	
}

#albumtable_processing
{
	display:inline;
	padding:30px;
}

.ui-albummanager-buttonbar button
{
	background: none !important;
	border:0;
	display:inline;
	margin:0;
	min-width:0;
	width:37px !important;
}

#fn-album-infobox
{
	border-top:1px solid #bbb!important;
	font-size:14px;
	line-height:24px;
}

.fg-toolbar
{
	position:relative;
}

.fg-toolbar .ui-button-text,.ui-buttonset .ui-button-text,.ui-albummanager-subbuttonbar.ui-helper-hidden
{
	display:none;
}

.opera .ui-albummanager-buttonbar button,.safari .ui-albummanager-buttonbar button,.msie .ui-albummanager-buttonbar button
{
	height:27px!important;
	margin-bottom:2px;
	margin-left:-9px!important;
	width:46px!important;
}

.ui-action-panel
{
	width:110px;
}

.ui-action-panel .ui-icon-check
{
	background-position:-301px -135px;
}

.ui-action-panel .ui-icon-check,.ui-action-panel .ui-icon-close
{
	background-image: url(../_img/icons.png) !important;
	background-repeat: no-repeat;
	cursor:pointer!important;
	display:block;
	height:26px;
	margin:0;
	overflow:hidden;
	width:37px;
}

.ui-action-panel .ui-icon-close
{
	background-position:-265px -135px;
}

.ui-action-panel button
{
	display:inline;
    background-color:transparent;
	margin:0;
	padding:0;
}

.ui-album-caption
{
	font-size:12px;
	font-style:italic;
	margin-left:.7em;
}

.ui-album-count
{
	font-size:12px;
	margin-top : 10px;
}

.ui-album-image
{
	-moz-box-shadow:3px 3px 3px #999;
	-webkit-box-shadow:3px 3px 3px #999;
	border:1px solid #cacaca;
	box-shadow:3px 3px 3px #999;
	float:left;
	height:100px;
	margin:3px 9px 3px 3px;
	width:100px;
}

.ui-album-image.ui-albummanager-state-selected
{
	-moz-box-shadow:3px 3px 3px #77c;
	-webkit-box-shadow:3px 3px 3px #77c;
	border:2px solid blue;
	box-shadow:3px 3px 3px #77c;
	height:98px;
	width:98px;
}

.ui-album-images
{
	margin:0;
	padding:0;
	width:100%;
}

.ui-album-infobox
{
	-moz-box-shadow:3px 3px 3px #999;
	-webkit-box-shadow:3px 3px 3px #999;
	background-position:#efefef;
	border:1px solid #cacaca;
	box-shadow:3px 3px 3px #999;
	float:left;
	height:200px;
	margin:6px 19px 6px 6px;
	overflow:auto;
	width:200px;
}

.ui-album-text
{
	display:inline-block;
	vertical-align:top;
}

.ui-album-thumbnail
{
	-moz-box-shadow:3px 3px 3px #999;
	-webkit-box-shadow:3px 3px 3px #999;
	border:1px solid #cacaca;
	box-shadow:3px 3px 3px #999;
	display:inline-block;
	margin:3px 9px 3px 3px;
	height:75px;
	width:75px;
}

.ui-albummanager
{
	font-size:12px;
	margin-top:.3em;
}

.ui-albummanager .ui-albummanager-state-hover:hover .ui-icon-download-1
{
	background-image:url(../_img/icons.png)!important;
}

.ui-albummanager .ui-albummanager-state-selected .ui-icon-arrowthick-1-e
{
	background-position:-151px -196px;
}

.ui-albummanager .ui-albummanager-state-selected .ui-icon-document
{
	background-position:-138px -257px;
}

.ui-albummanager .ui-albummanager-state-selected .ui-icon-download-1
{
  background-image: url(../_img/icons.png)!important;
  background-position: -200px -257px;	
}

.ui-albummanager .ui-albummanager-state-selected .ui-icon-folder-collapsed
{
	background-position:-161px -257px;
}

.ui-albummanager tbody tr.row-selected:hover *
{
	background-color:#e5e5e5!important;
}

.ui-albummanager tbody,.ui-albummanager thead,#albumtable_wrapper button:hover,.ui-albummanager-prev-arrow:hover,.ui-albummanager-next-arrow:hover,.ui-albummanager-path-widget .ui-albummanager-path-link,.ui-albummanager-type-row
{
	cursor:pointer;
}

.ui-albummanager th
{
	font-size:14px;
	text-align:left;
}

.ui-albummanager tr
{
	line-height:24px!important;
}

.ui-albummanager-buttonbar
{
	position:absolute;
	right:0;
}

.ui-albummanager-buttonbar span
{
	margin:0;
}

.ui-albummanager-column-album,.ui-albummanager-column-created,.ui-albummanager-column-modified,.ui-album-created,.ui-album-modified
{
	vertical-align:top!important;
}

.ui-albummanager-column-created,.ui-albummanager-column-modified
{
	width:100px;
}

.ui-albummanager-column-type span
{
	margin-top:1px;
}

.ui-albummanager-fake-updir
{
	cursor:default;
}

.ui-albummanager-information-panel
{
	background-color:#efdfad;
	border:2px solid #dfcf9d;
	font-size:12px;
	opacity:.95;
	padding-bottom:.4em;
	padding-top:.4em;
	position:absolute;
	text-align:center;
	width:90%;
}

.ui-albummanager-panel
{
	position:relative;
	z-index:9999;
}

.ui-albummanager-path-divider
{
	background-image: url(../_img/icons.png) !important;
	background-position: -164px -196px;
	background-repeat: no-repeat;
	cursor:pointer!important;
	display:inline-block;
	height:13px;
	overflow:hidden;
	vertical-align:text-bottom;
	width:19px;
}

.ui-albummanager-path-widget
{
	float:left;
	font-size:14px;
	padding-top:10px;
}

.ui-albummanager-path-widget .ui-albummanager-path-divider
{
	margin:.25em;
}

.ui-albummanager-path-widget a
{
	color:#000;
	margin:0 3px;
}

.ui-albummanager-path-widget a:hover
{
	text-decoration:underline;
}

.ui-albummanager-state-dblckick
{
	background-color:#506ab2!important;
}

.ui-albummanager-state-header
{
	background-color:#ddd;
	color:#000;
	line-height:17px!important;
	padding-left:1.2em;
}

.ui-albummanager-state-hover:hover
{
	background-color:#e5e5e5;
	color:#000;
}

.ui-albummanager-state-selected
{
	background-color:#506ab2;
	border:1px 0 solid #e4e4e4;
	color:#FFF;
}

.ui-albummanager-state-selected:hover
{
	background-color:#506ab2!important;
	color:#fff!important;
}

.ui-albummanager-subbuttonbar
{
	display:inline-block;
	margin-left:.5em;
	margin-right:.5em;
}

.ui-form-controls
{
	margin-right:1em;
	margin-top:.5em;
	text-align:right;
}

.ui-form-wrapper
{
	height:260px;
}

div.ui-album-usertable-container
{
	height:100px;
	overflow:auto;
}

table.ui-album-no-sub thead tr.ui-albummanager-header
{
	color:#000;
}

table.ui-album-usertable
{
	border:1px solid #ccc;
	border-collapse:collapse;
	font-size:11px;
	overflow:auto;
	width:100%;
	margin-top : 10px;
	margin-bottom : 10px;
}
#fn-albummanager-create-form-step-button-branch-adduser {
	border : 0 none;
	padding : 5px;
	font-size : 12px;
	margin-top : 10px;
}

table.ui-album-perm-public
{
	border:1px solid #ccc;
	border-collapse:collapse;
	font-size:11px;
	overflow:auto;
	width:100%;
	margin-top : 10px;
}
#fn-albummanager-perm-dialog table tbody tr td:first-child {
	width : 75%;
}

table.ui-album-usertable thead
{
	border-bottom:1px solid #aaa;
}

#fn-albummanager-modify-caption {
	height: 150px;
}

.ui-albummanager-clickable {
	cursor: pointer;
}

.ui-albummanager-buttonbar-wrapper {
	position: relative;
	height: 30px;
}

.ui-albummanager-users-edit {
	border: 2px dashed gray;
	background-color: #ddd;  
}
.ui-album-body {
	position: relative;
}

.ui-album-public {
	position: absolute;
	top: 0;
	right: 0;
	background-image: url(../_img/unlocked.png) !important;
	background-repeat: no-repeat;
	cursor:pointer!important;
	display:inline-block;
	height:25px;
	overflow:hidden;
	vertical-align:text-bottom;
	width:31px;
}

.ui-album-public.ui-album-private {
	background-image: url(../_img/locked.png) !important;
	height:25px;
	width:19px;
}

.ui-album-dialog-subdialog {
	vertical-align: middle;
	text-align: center;
	padding-top: 1em;
	width: 100%;
	height: 60px;
	background-color: #000;
	color: #fff;
	position: absolute;
	top: 0;
	left: 0;
}
.ui-subdialog-action,
.ui-album-users-actions
 {
	display: inline-block;
	background: transparent;
	border: 0;
}

.ui-subdialog-message {
	font-weight: 400;
	margin : 4px;
}

.ui-subdialog-message strong {
	font-weight: 900;
}

.ui-subdialog-action
{
	width:110px;
}

.ui-album-users-actions {
	text-align: right;
	vertical-align: bottom;
	margin-bottom : 2px;	
}

#fn-albummanager-users-edit-template input, #fn-albummanager-users-add-template input {
	width : 145px;
}

.ui-subdialog-action button,
.ui-album-users-actions button
{
	display:inline;
    background:transparent !important;
	margin:0;
	padding:0;
	border : 0 none;
}

.ui-subdialog-action .ui-icon-check,
.ui-album-users-actions .ui-icon-check
{
	background-position:-301px -135px;
}
.ui-subdialog-action .ui-icon-close,
.ui-album-users-actions .ui-icon-close
{
	background-position:-265px -135px;
}

.ui-subdialog-action .ui-icon-check,.ui-subdialog-action .ui-icon-close,
.ui-album-users-actions .ui-icon-check,.ui-album-users-actions .ui-icon-close
{
	background-image: url(../_img/icons.png) !important;
	background-repeat: no-repeat;
	cursor:pointer!important;
	display:block;
	height:26px;
	margin:0;
	overflow:hidden;
	width:37px;
}

